seventh commit.  made changes to the stylesheet, and attempted to fix an issue in which the tweets are not showing up

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -2,6 +2,6 @@ body {
 	background: tan;
 }
 
-#twitSearch {
-	align= center
-}
+#content {
+	position: absolute;
+	}
